--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body ondblclick="changevideo()">
+   <!-- Header section -->
    <div id="header-floating" class="float">
       <div class="options_header">
          <div class="option_header active" id="portfolio" ondblclick="navigate(this)"
@@ -83,6 +84,8 @@
          <span>Back</span>
        </button>
    </div>
+
+   <!-- Background videos played infity  -->
    <video autoplay loop muted id="video_1" class="bgvideo">
       <source src="assets/1080-h2.mp4">
    </video>
@@ -90,6 +93,7 @@
       <source src="assets/1080-h.mp4">
    </video>
 
+   <!-- Main menu with larger cards -->
    <div class="options">
       <div class="option active" id="portfolio" ondblclick="navigate(this)"
          style="--optionBackground:url(assets/portfolio.png);">
@@ -155,6 +159,8 @@
          </div>
       </div>
    </div>
+
+   <!-- Circular menu in the bottom of the page -->
    <div id="circularMenu1" class="circular-menu circular-menu-left">
 
       <a class="floating-btn" onclick="document.getElementById('circularMenu1').classList.toggle('active');">
@@ -186,6 +192,7 @@
 
    </div>
 
+   <!-- Iframe to show the differents links -->
    <iframe src="https://juanfrancisco21.github.io/Portfolio/" id="iframe" class=" iframe " ></iframe>
 
    <!-- partial -->
